increase line-height (thx @Profpatsch)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,7 @@ html a {
     text-decoration-style: wavy;
     text-decoration-color: #1a1a1a;
     color: black;
+    line-height: 1.6;
 }
 
 html a:visited {
@@ -16,6 +17,7 @@ html a:visited {
     text-decoration-style: wavy;
     text-decoration-color: #1a1a1a;
     color: black;
+    line-height: 1.6;
 }
 
 .navbar {
@@ -61,6 +63,7 @@ footer {
 
 pre {
     padding: 0px;
+    line-height: 1.3;
 }
 
 body h2 {
