--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,14 +6,14 @@ html {
 
 html a {
     text-decoration-line: underline;
-    text-decoration-style: wavy;
+    text-decoration-style: dotted;
     text-decoration-color: #1a1a1a;
     color: black;
 }
 
 html a:visited {
     text-decoration-line: underline;
-    text-decoration-style: wavy;
+    text-decoration-style: dotted;
     text-decoration-color: #1a1a1a;
     color: black;
 }
